[tool.poetry]
name = "blurringexistence.net"
version = "1.0.0"
description = "The sourcecode for blurringexistence.net"
authors = ["Ingmar Steen <iksteen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Markdown = "^2.6"
pelican = "^4.0"
typogrify = "^2.0.7"
pelican-albums = "^0.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
